--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mersenne-twister-m"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 authors = ["Nils Feierabend <mztikk@outlook.de>"]
 repository = "https://github.com/mztikk/mersenne-twister"
@@ -10,3 +10,5 @@ description = "mersenne twister pseudorandom number generator"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+byteorder = "1.4.3"
+rand_core = "0.6.4"
