--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ license = "MIT"
 description = "mersenne twister pseudorandom number generator"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+rand = ["dep:rand_core"]
 
 [dependencies]
-byteorder = "1.4.3"
-rand_core = "0.6.4"
+rand_core = { version = "0.6.4", optional = true }
