github action build and test all features

--- a/.github/workflows/rust-build-test.yml
+++ b/.github/workflows/rust-build-test.yml
@@ -15,7 +15,21 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Build
-        run: cargo build --verbose
-      - name: Run tests
-        run: cargo test --verbose
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Install cargo-hack
+        uses: taiki-e/install-action@cargo-hack
+        
+      - name: Build each feature
+        run: cargo hack build --verbose --each-feature
+      - name: Run tests each feature
+        run: cargo hack test --verbose --each-feature
+
+      - name: Build all features
+        run: cargo hack build --verbose --all-features
+      - name: Run tests all features
+        run: cargo hack test --verbose --all-features
+
+      - name: Build feature-powerset
+        run: cargo hack build --verbose --feature-powerset
+      - name: Run tests feature-powerset
+        run: cargo hack test --verbose --feature-powerset
