--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ description = "mersenne twister pseudorandom number generator"
 rand = ["dep:rand_core"]
 
 [dependencies]
-rand_core = { version = "0.6.4", optional = true }
+rand_core = { version = "0.9.3", optional = true }
+seq-macro = "0.3.6"
